--- a/appendix_d.Rmd
+++ b/appendix_d.Rmd
@@ -2,7 +2,8 @@
 
 
 
-### Sample points
+### Sample points {-}
+
 A rich dataset with many types of data were collected along the length of the lagoon, shown in \@ref(fig:dev-seddata1). These sites are referred to throughout this document and catalogued here on one section to create an overview. The grab samples (24) and rapid assessments (50) were taken at many points and provided one snapshot in time, in the surface sediment only. The grab samples were taken at the same points as almost half of the rapid samples and were submitted for many assays, such as total metals, as well as sediment quality. The rapid assessment samples were assessed for texture, colour and oxic/sulfidic state. Seven extra particle size samples were taken, which complement the sediment texture data from the grab samples. Five sites had cores taken in two seasons and used to measured sediment-water fluxes, as well as concentration-depth profiles. Macro invertebrate samples were taken at seven points, and one sample was transplanted to an eighth point. Finally, particle fluxes were measured at the site Villa de Yumpa.
 
 
@@ -27,7 +28,8 @@ knitr::include_graphics(c("images/dev/AppD/sed_MacrosMap.png"
  
  ```
  
-### Sediment quality
+### Sediment quality {-}
+
 Two sediment quality surveys by the University of Adelaide provided sediment quality data along the length of the lagoon (Figure \@ref(fig:dev-seddata2)). 24 grab samples were measured for % moisture, and proportions of gravel, sand, silt and clay. Seven other samples were taken for grain size analysis in classes of gravel, coarse sand, medium sand, fine sand, very fine sand and mud. These measured points were categorized to represent the ten Coorong zones, as well as deep and shallow areas.
 
 \
@@ -136,7 +138,7 @@ knitr::include_graphics(c("images/dev/AppD/sed_Texture.png"
 
 \
 
-### Salinity
+### Salinity {-}
 
 The salinity in the southern lagoon was much higher than in the northern lagoon, due to the evaporation of the water between rainfall events (\@ref(fig:dev-seddata4)). The Goyder Institute T&T report suggested that high salinity had destroyed habitat for macroinvertebrates (see also section Macroinvertebrates). Salinity was measured in the grab samples 0 to 5 cm deep. It is displayed in (\@ref(fig:dev-seddata4)) as interpolated sediment salinity. Note that it is hypersaline even in the northern lagoon, in zone 6. 
 
@@ -148,7 +150,7 @@ knitr::include_graphics(c("images/dev/AppD/sed_Salinity.png"
 ```
 
 
-### Sulfur
+### Sulfur {-}
 
 The rapid assessments gave the general oxic/sulfidic state of the sediment, where the ooze texture usually coincided with the sulfidic state of the sediment (see criteria in \@ref(tab:3dev-sedQual4). These were divided per zone (\@ref(fig:dev-seddata5)) and further divided by depth. There were no measurements of $SO_4^{2-}$ in the sediments or the water column, and so an estimate was made by correlating the $SO_4^{2-}$ concentration with salinity.
 
@@ -170,7 +172,7 @@ sediment_linkvars <- read_xlsx("tables/sed/SedQualitySamples.xlsx", sheet = "Rap
    column_spec(1, width_min = "10em") %>%
    column_spec(2, width_min = "20em") %>% 
    row_spec(1:3, background = 'white') %>% 
-   scroll_box(width = "600px", height = "300px",
+   scroll_box(width = "650px", height = "300px",
               fixed_thead = FALSE)
 ```
 
@@ -201,11 +203,12 @@ sediment_linkvars <- read_xlsx("tables/sed/SedQualitySamples.xlsx", sheet = "SCo
                  full_width = F, position = "center", 
                  font_size = 12) %>% 
    row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%  
-   column_spec(1, width_min = "10em") %>%
-   column_spec(2, width_min = "20em") %>% 
-   row_spec(1:3, background = 'white') # %>% 
-   # scroll_box(width = "500px", height = "350px",
-              # fixed_thead = FALSE)
+   column_spec(1, width_min = "22em") %>%
+   column_spec(2, width_min = "15em") %>% 
+   column_spec(3, width_min = "15em") %>% 
+   row_spec(1:3, background = 'white')  %>% 
+   scroll_box(width = "650px", height = "400px",
+               fixed_thead = FALSE)
 ```
 
 </center>
@@ -213,7 +216,7 @@ sediment_linkvars <- read_xlsx("tables/sed/SedQualitySamples.xlsx", sheet = "SCo
 
 \
 
-### Nutrients
+### Nutrients {-}
 
 The grab samples also provided TN and TP measurements. These are shown as interpolated data (\@ref(fig:dev-seddata6)). Nutrients were concentrated in zones 4 and 6, either side of the narrow, shallow zone 5 that separates the north and south lagoons. 
 
@@ -280,7 +283,7 @@ sediment_linkvars <- read_xlsx("tables/sed/SedQualitySamples.xlsx", sheet = "Nut
 
 
 
-### Oxygen
+### Oxygen {-}
 
 The rapid assessment sites give an indication of whether the sediment was oxic (high value) or sulfidic (low value) (\@ref(fig:dev-seddata9)). Zones 3, 4, 6 and 7 were the least oxic.
 
@@ -338,7 +341,8 @@ knitr::include_graphics(c("images/dev/AppD/sed_OxygenCores.png"
 
 </center>
 
-### Organic matter
+### Organic matter {-}
+
 The grab samples provided a measure of total organic carbon (TOC). The highest areas mapped onto the areas of high nutrients (\@ref(fig:dev-seddata11)).
 
 
@@ -369,7 +373,8 @@ TOC % was converted to organic matter (mmol L^-1^) according to the following ra
 
 
 
-### Macroinvertebrates
+### Macroinvertebrates {-}
+
 Macroinvertebrate populations were measured at seven locations (\@ref(fig:dev-seddata12)). The northernmost two sites (zones 10 and 9) had high abundance. Noonameena (zone 7) had moderately low abundance. The southernmost sites (zones 5 and 2) had very low abundance. The variable that explained this pattern was the hypersalinity (T&I reference document). A sample was taken from Jack Point (zone 2) and transplanted to Long Point (zone 8).
 
 <center>
@@ -385,7 +390,7 @@ knitr::include_graphics(c("images/dev/AppD/sed_MacrosZ.png"
 
 </center>
 
-### Iron and manganese
+### Iron and manganese {-}
 
 \
 
@@ -476,7 +481,7 @@ Iron data was also available from the water column sampling to use as a boundary
 
 
 
-### Iron and sulfur
+### Iron sulfides {-}
 
 \
 
@@ -492,7 +497,7 @@ The AVS concentrations were compared to the total iron concentrations from the g
 
 \
 
-### pH and alklainity
+### pH and alkalinity {-}
 
 \
 pH was generally high, with an average of 8.72, across the grab samples. This was likely a result of the high amounts of shell grit in the surface sediment, corresponding with the high scores in the rapid assessments. Inorganic carbon was measured as the difference between %Total carbon minus %Total organic carbon. The maximum value was in zone 2 at the inland edge, and the minimum value was in zone 6 in the channel.
