--- a/cdm_resuspension_and_turbidity.Rmd
+++ b/cdm_resuspension_and_turbidity.Rmd
@@ -206,6 +206,19 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 <br>
 
+An example output from the model showing the spatial variability in $K_d$ at a given time is shown in Figure \@ref(fig:dev-pic109).
+
+<center>
+
+```{r dev-pic109, echo = FALSE, out.width='80%', class = "text-image", fig.cap = "Model output showing the extinction coefficient, Kd (/m), variability within the lagoon."} 
+
+knitr::include_graphics("images/dev/extc.png")
+
+```
+
+</center>
+
+<br>
 
 ## Validation and assessment
 
