--- a/references/Resuspension.bib
+++ b/references/Resuspension.bib
@@ -82,9 +82,9 @@ isbn = {978-1-4200-4755-4},
 doi = {10.1201/b10262-11}
 }
 @report{mosley2021,
-	title = {Healthy Coorong, healthy Basin – Phase one trials and investigations project. Component 1 – Nutrient Dynamics. Project deliverable: 1.3.2: Annual Investigations Report: Sediment quality, nutrient cycling and fluxes},
-	author = {Mosley et al},
+	title = {Healthy Coorong, healthy Basin - Phase one trials and investigations project. Component 1 - Nutrient Dynamics. Project deliverable: 1.3.2: Annual Investigations Report: Sediment quality, nutrient cycling and fluxes},
+	author = {Mosley, Luke and Teasdale, Peter and Huang,Leslie and Welsh,David and Erler, Dirk and Ferguson,Angus and Brookes,Justin and  Keneally,Chris and Chilton, Daniel and Dittmann,Sabine and Lam-Gordillo,Orlando and Southgate,Matilda and Simpson, Stuart},
 	year = {2021},
-	journal = {Goyder Institute for Water Research Technical Report Series},
+	journal = {Goyder Institute for Water Research Interim Report },
 	url = {}
 }
