--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,7 @@ site: bookdown::bookdown_site
 documentclass: book
 bibliography:  ["references/references.bib",
                 "references/introduction.bib",
+                "references/CDMoverview.bib",
                 "references/habitat.bib",
                 "references/resuspension.bib",
                 "references/macroalgae.bib",
