--- a/references/Introduction.bib
+++ b/references/Introduction.bib
@@ -82,7 +82,7 @@ keywords = {}
 year = {2008}, 
 title = {{Survey of waterbird communities of the living Murray icon sites - November 2007}}, 
 author = {Kingsford, R.T. and Porter, J.L. }, 
-journal = {Canberra, ACT: Murray-Darling Basin Commission}, 
+journal = {Canberra, ACT: Murray-Darling Basin Commission} 
 }
 
 @article{stolarska2012, 
@@ -144,6 +144,7 @@ keywords = {}
 
 @book{gibbs2018,
 	title = {Hydrology and Hydrodynamics of the Lower Lakes, Coorong and Murray Mouth. In Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe). Royal Society of South Australia},
+	author = {Gibbs M,  and Joehnk K, and Webster I, and Heneker T}
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
 	year = {2018},
 	month = {12},
@@ -155,6 +156,7 @@ keywords = {}
 
 @book{barnett2018,
 	title = {Hydrogeology of the Lower Lakes and Coorong Region. In Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe). Royal Society of South Australia},
+	author = {Barnett S}
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
 	year = {2018},
 	month = {12},
@@ -175,8 +177,8 @@ keywords = {}
 @report{mosley2017, 
 year = {2017}, 
 title = {Assessment and modelling of the effects of the 2013-2016 Morella Basin releases on Coorong water quality. Report to the Department of Environment, Water and Natural Resources (DEWNR)}, 
-author = {Mosley L.M. and Hamilton B. and Busch B. and Hipsey M. and and Taylor B.  }, 
-journal = {University of Adelaide, South Australia.}, 
+author = {Mosley, LM and Hamilton, B and Busch, B and Hipsey, M and and Taylor, B.  }, 
+journal = {University of Adelaide, South Australia} 
 }
 @report{frahn2015, 
 year = {2015}, 
@@ -188,6 +190,6 @@ url = {https://data.environment.sa.gov.au/Content/Publications/CLLMM_169_Distrib
 @report{bmt2017, 
 year = {2017}, 
 title = {Coorong Options Assessment}, 
-author = {BMT WBM}, 
+author = {BMT, WBM}, 
 journal = {Brisbane: BMT WBM Pty Ltd}, 
 }
