--- a/references/Introduction.bib
+++ b/references/Introduction.bib
@@ -85,6 +85,20 @@ author = {Kingsford, R.T. and Porter, J.L. },
 journal = {Canberra, ACT: Murray-Darling Basin Commission} 
 }
 
+@article{kingsford2000,
+	title = {Ecological impacts of dams, water diversions and river management on floodplain wetlands in Australia},
+	author = {{Kingsford}, {R.T.}},
+	year = {2000},
+	month = {04},
+	date = {2000-04},
+	journal = {Austral Ecology},
+	pages = {109--127},
+	volume = {25},
+	number = {2},
+	doi = {10.1046/j.1442-9993.2000.01036.x},
+	url = {http://dx.doi.org/10.1046/j.1442-9993.2000.01036.x},
+	langid = {en}
+}
 @article{stolarska2012, 
 year = {2012}, 
 title = {{Review of Mathematical Models of Water Quality}}, 
@@ -143,9 +157,11 @@ keywords = {}
 }
 
 @book{gibbs2018,
-	title = {Hydrology and Hydrodynamics of the Lower Lakes, Coorong and Murray Mouth. In Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe). Royal Society of South Australia},
-	author = {Gibbs M,  and Joehnk K, and Webster I, and Heneker T}
+	title = {Hydrology and Hydrodynamics of the Lower Lakes, Coorong and Murray Mouth},
+	author = {Gibbs M,  and Joehnk K, and Webster I, and Heneker T},
+	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
+	publisher = {Royal Society of South Australia. University of Adelaide Press},
 	year = {2018},
 	month = {12},
 	date = {2018-12-01},
@@ -155,13 +171,14 @@ keywords = {}
 }
 
 @book{barnett2018,
-	title = {Hydrogeology of the Lower Lakes and Coorong Region. In Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe). Royal Society of South Australia},
-	author = {Barnett S}
+	title = {Hydrogeology of the Lower Lakes and Coorong Region},
+	author = {Barnett S},
+	booktitle = {Natural History of the Coorong, Lower Lakes, and Murray Mouth region (Yarluwar-Ruwe)},
 	editor = {{Mosley}, {Luke} and {Ye}, {Qifeng} and {Shepherd}, {Scoresby} and {Hemming}, {Steve} and {Fitzpatrick}, {Rob}},
+	publisher = {Royal Society of South Australia. University of Adelaide Press},
 	year = {2018},
 	month = {12},
 	date = {2018-12-01},
-	publisher = {University of Adelaide Press},
 	doi = {10.20851/natural-history-cllmm},
 	url = {http://dx.doi.org/10.20851/natural-history-cllmm}
 }
